# maplestory-wasm

./: .gitignore  .gitmodules  AGENTS.md  README.md  docker-compose.yml
docker/: builder.Dockerfile
src/client/: .clang-format  .clangd  CMakeLists.txt  Configuration.cpp  Configuration.h  Constants.h  Journey.cpp  Journey.h
src/client/Audio/: Audio.cpp
src/client/Character/: Char.cpp  Char.h  CharStats.cpp  CharStats.h  Player.cpp  Player.h  SkillId.h
src/client/Character/Inventory/: Equip.h
src/client/Character/Look/: CharLook.cpp  Clothing.cpp  Clothing.h  EquipSlot.h
src/client/Data/: SkillData.cpp
src/client/Gameplay/: Camera.cpp  Stage.cpp  Stage.h
src/client/Gameplay/Combat/: Attack.h  Combat.cpp  Combat.h  Skill.cpp
src/client/Gameplay/MapleMap/: LivingObject.h  MapBackgrounds.cpp  MapBackgrounds.h  MapChars.cpp  MapChars.h  MapDrops.cpp  MapDrops.h  MapEffect.cpp  MapEffect.h  MapNpcs.h  MapObjects.cpp  MapObjects.h  MapPortals.cpp  Mob.cpp  Mob.h  Npc.h  Portal.cpp  Portal.h  Tile.cpp
src/client/Graphics/: Animation.cpp  Geometry.cpp  Geometry.h  GraphicsGL.cpp  GraphicsGL.h
src/client/IO/: KeyConfig.h  Keyboard.cpp  Keyboard.h  UI.cpp  UI.h  UIDragElement.h  UIElement.cpp  UIElement.h  UIState.h  UIStateGame.cpp  UIStateGame.h  UIStateLogin.cpp  UIStateLogin.h  Window.cpp  Window.h
src/client/IO/Components/: Button.h  EquipTooltip.cpp  Icon.cpp  Icon.h  MapTooltip.cpp  MapTooltip.h  MapleButton.cpp  ScrollingNotice.cpp  TextTooltip.cpp  TextTooltip.h  Textfield.cpp
src/client/IO/UITypes/: UIBuffList.cpp  UIBuffList.h  UICharCreation.cpp  UICharCreation.h  UICharSelect.cpp  UICharSelect.h  UIChatBar.cpp  UIChatBar.h  UIEquipInventory.cpp  UIEquipInventory.h  UIItemInventory.cpp  UIItemInventory.h  UIKeyConfig.cpp  UIKeyConfig.h  UILogin.cpp  UILogin.h  UIMiniMap.cpp  UIMiniMap.h  UINotice.cpp  UINotice.h  UINpcTalk.cpp  UINpcTalk.h  UIParty.cpp  UIParty.h  UIShop.cpp  UIShop.h  UISkillBook.cpp  UISkillBook.h  UISoftKey.cpp  UISoftKey.h  UIStatsInfo.cpp  UIStatsInfo.h  UIStatusBar.cpp  UIStatusBar.h  UIStatusMessenger.cpp  UIStatusMessenger.h  UIStorage.cpp  UIStorage.h  UIWorldMap.cpp  UIWorldMap.h
src/client/LazyFS/: LazyFS.cpp  LazyFS.h  LazyFileBackend.cpp  LazyFileBackend.h  LazyFileLoader.cpp  LazyFileLoader.h  lazyfs.js
src/client/Net/: Cryptography.cpp  Cryptography.h  NetConstants.h  OutPacket.h  PacketSwitch.cpp  Session.cpp  SockInternal.cpp  SockInternal.h  SocketWinsock.cpp
src/client/Net/Handlers/: AttackHandlers.cpp  InventoryHandlers.cpp  LoginHandlers.cpp  MapObjectHandlers.cpp  MessagingHandlers.cpp  MessagingHandlers.h  NpcInteractionHandlers.cpp  NpcInteractionHandlers.h  PlayerHandlers.cpp  PlayerHandlers.h  SetfieldHandlers.cpp  SetfieldHandlers.h
src/client/Net/Packets/: CharCreationPackets.h  GameplayPackets.h  LoginPackets.h  MessagingPackets.h  NpcInteractionPackets.h  PlayerPackets.h  SelectCharPackets.h
src/client/Util/: Misc.cpp  Misc.h  NxFiles.cpp
(+19 files in other folders)
